[gd_scene load_steps=10 format=3 uid="uid://bkpj5sgb68nia"]

[ext_resource type="Texture2D" uid="uid://1h3wvd5f1bw6" path="res://assets/images/quiz/answer.png" id="1_jng0p"]
[ext_resource type="Script" uid="uid://bfi1xqjtwr1lb" path="res://scripts/quiz.gd" id="1_w5ac1"]
[ext_resource type="Texture2D" uid="uid://b00amhvcpv0gq" path="res://assets/images/quiz/answer-pressed.png" id="2_2fkxq"]
[ext_resource type="Texture2D" uid="uid://5i0sc38r74md" path="res://assets/images/quiz/refrence quiz.png" id="2_xq7j8"]
[ext_resource type="FontFile" uid="uid://ykv65caaf2og" path="res://assets/font/JelloStone-YqKz8.ttf" id="3_3bubg"]
[ext_resource type="Texture2D" uid="uid://c05y7a3bramha" path="res://assets/images/quiz/Quiz.png" id="3_bn6h1"]

[sub_resource type="LabelSettings" id="LabelSettings_xq7j8"]
font = ExtResource("3_3bubg")
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_bn6h1"]
font = ExtResource("3_3bubg")
font_size = 96
shadow_size = 8
shadow_color = Color(0, 0, 0, 0.09803922)
shadow_offset = Vector2(1, 4)

[sub_resource type="LabelSettings" id="LabelSettings_m81w7"]
font = ExtResource("3_3bubg")
font_size = 30
shadow_size = 8
shadow_color = Color(0, 0, 0, 0.09803922)
shadow_offset = Vector2(1, 2)

[node name="Quiz" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w5ac1")
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="."]

[node name="RefrenceQuiz" type="Sprite2D" parent="."]
visible = false
position = Vector2(960, 540)
texture = ExtResource("2_xq7j8")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.65900004
anchor_right = 0.5
anchor_bottom = 0.65900004
offset_left = -738.0
offset_top = -469.72003
offset_right = 844.0
offset_bottom = 126.27997
texture = ExtResource("3_bn6h1")

[node name="LabelQuestion" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 122.0
offset_top = 206.0
offset_right = 1346.0
offset_bottom = 247.0
text = "testing"
label_settings = SubResource("LabelSettings_xq7j8")
horizontal_alignment = 1
vertical_alignment = 3
autowrap_mode = 2

[node name="TimerLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.65900004
anchor_right = 0.5
anchor_bottom = 0.65900004
offset_left = 605.0
offset_top = -382.72003
offset_right = 723.0
offset_bottom = -281.72003
label_settings = SubResource("LabelSettings_bn6h1")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.508
anchor_top = 0.652
anchor_right = 0.508
anchor_bottom = 0.652
offset_left = -678.36005
offset_top = -42.160034
offset_right = 656.63995
offset_bottom = 54.839966
grow_horizontal = 2
theme_override_constants/separation = 60

[node name="Answer1" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_jng0p")
texture_pressed = ExtResource("2_2fkxq")

[node name="LabelAnswer1" type="Label" parent="HBoxContainer/Answer1"]
layout_mode = 0
offset_left = 27.5
offset_top = 32.0
offset_right = 379.5
offset_bottom = 57.0
text = "ABCD"
label_settings = SubResource("LabelSettings_m81w7")
horizontal_alignment = 1

[node name="Answer2" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_jng0p")
texture_pressed = ExtResource("2_2fkxq")

[node name="LabelAnswer1" type="Label" parent="HBoxContainer/Answer2"]
layout_mode = 0
offset_left = 27.5
offset_top = 32.0
offset_right = 379.5
offset_bottom = 57.0
text = "ABCD"
label_settings = SubResource("LabelSettings_m81w7")
horizontal_alignment = 1

[node name="Answer3" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_jng0p")
texture_pressed = ExtResource("2_2fkxq")

[node name="LabelAnswer1" type="Label" parent="HBoxContainer/Answer3"]
layout_mode = 0
offset_left = 27.5
offset_top = 32.0
offset_right = 379.5
offset_bottom = 57.0
text = "ABCD"
label_settings = SubResource("LabelSettings_m81w7")
horizontal_alignment = 1
